remove all vercel-related stuff. used adatable.io

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "memberonly-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "api/index.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon api/index.js"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
